--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,13 @@ jobs:
     steps:
       - checkout:
           path: ~/repo
-      - run: pip install -r requirements.txt
+      -run: |
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install -r requirements.txt
+      - run: |
+          . venv/bin/activate
+          pip install -r requirements.txt
       - run: ./test.bash
   conda:
     docker:
