--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -3,6 +3,6 @@ FROM jupyter/scipy-notebook:1085ca054a5f
 RUN pip install --process-dependency-link \
     git+https://github.com/Quansight/jupyter-mapd-renderer.git@setup.py
 
-RUN jupyter labextension install jupyterlab-mapd
+RUN jupyter labextension install jupyterlab-mapd@0.3.0
 
 COPY . .
