--- a/notebooks/Dockerfile
+++ b/notebooks/Dockerfile
@@ -1,7 +1,8 @@
 FROM jupyter/scipy-notebook:1085ca054a5f
 
-RUN pip install --process-dependency-link \
-    git+https://github.com/Quansight/jupyter-mapd-renderer.git@setup.py
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt
 
 RUN jupyter labextension install jupyterlab-mapd@0.3.0
 
