--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -10,5 +10,5 @@ dependencies:
   - pyyaml
   - regex
   - pip:
-    - git+https://github.com/Quansight/jupyter-mapd-renderer.git@4a8183bf8cad901910ebc4925f5a42162cbbf45b#egg=jupyter-mapd-renderer[altair]
-    - git+https://github.com/Quansight/ibis.git@55a46fe85dcfe40c601aa4988fa2900fb4dd5804#egg=ibis-framework
+    - git+https://github.com/Quansight/jupyter-mapd-renderer.git#egg=jupyter-mapd-renderer[altair]
+    - git+https://github.com/Quansight/ibis.git#egg=ibis-framework
