--- a/notebooks/docker-compose.yml
+++ b/notebooks/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8888:8888"
     volumes:
       - ".:/home/jovyan"
+  jupyter-minimal:
+    build: .
   jupyter-dev:
     build:
       context: .
