--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,3 +48,7 @@ workflows:
     triggers:
       - schedule:
           cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - master
