--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/mapd/pymapd.git
 git+https://github.com/Quansight/jupyter-mapd-renderer.git#egg=jupyter-mapd-renderer[altair]
 git+https://github.com/Quansight/ibis.git#egg=ibis-framework[mapd]
 jupyterlab
