--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -11,4 +11,4 @@ dependencies:
   - regex
   - pip:
     - git+https://github.com/Quansight/jupyter-mapd-renderer.git#egg=jupyter-mapd-renderer[altair]
-    - git+https://github.com/Quansight/ibis.git#egg=ibis-framework
+    - git+https://github.com/Quansight/ibis.git@add_rowid_op#egg=ibis-framework
