Add another notebook and upgrade JL version

--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -3,12 +3,13 @@ channels:
   - conda-forge
 dependencies:
   - python=3.6
-  - jupyterlab=0.33.*
+  - jupyterlab=0.34.*
   - pymapd
   - altair
   - nodejs
   - pyyaml
   - regex
+  - ipywidgets
   - pip:
     - git+https://github.com/Quansight/jupyter-mapd-renderer.git#egg=jupyter-mapd-renderer[altair]
     - git+https://github.com/Quansight/ibis.git@add_rowid_op#egg=ibis-framework
